Stylesheets : Scope the overflow prevention to a class; don't make it default

--- a/css/pages/page.css
+++ b/css/pages/page.css
@@ -6,7 +6,7 @@
 	/*overflow-x: hidden;*/ /* Need to be disabled for position Sticky*/
 }
 
-section {
+.no-overflow {
 	overflow-x: hidden;
 }
 
